--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jobify-dev",
+  "name": "jobTrackerV2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -43,7 +43,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
-    "prisma": "^5.7.1",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
